--- a/html.html
+++ b/html.html
@@ -2,19 +2,20 @@
 <html>
   <head>
     <title>Sohad Flower Shop </title>
-    <link  href="css/css.css" />
+    <link  rel = "stylesheet"    type = "text/css" href="css/c01.css"  />
+    <script src="js/add-content.js"></script>
+
   
   </head>
 
 
 <body>
-  <header>
-  <script src="js/java.js"></script>
+  
+  
     <h1> Sohad Flower Shop</h1>
 
-    
    
-  </header>
+
 
   <main>
 
@@ -45,7 +46,7 @@
     <nav>
     <ul>
 
-      <li> <a href="  https://www.google.com/search?q=مجموعة+صور+ورود&tbm=isch&tbs=rimg:CRYyV2uHXxf8ImCZeVrGwYC9wozXs9RTZMjzxdBu7JDjry4VxYVXI1-rEDts6esk_1EFTzi80GIeU1vBce9Fbt3j0kQEImT8sMeX9LSG7p1gIzd36drkDoP9xjKQr7VMJ2JlqoQZO617CB_1MqEgmZeVrGwYC9whG2SdzfMmEi1yoSCYzXs9RTZMjzEWbGUr8MtnxlKhIJxdBu7JDjry4RJYlEugjhydMqEgkVxYVXI1-rEBHPFbSn_1dJU7CoSCTts6esk_1EFTEZRdB_1UxDlfwKhIJzi80GIeU1vARJCmQguPE4eIqEglce9Fbt3j0kRFQqRTvpUZ_1pyoSCQEImT8sMeX9EdZN2r4Hd-X2KhIJLSG7p1gIzd0RpMJYNhxF2MkqEgn6drkDoP9xjBFif0KsuXIMjCoSCaQr7VMJ2JlqEWl5CkDnsqOxKhIJoQZO617CB_1MREq86Lpn5Mu8&tbo=u&sa=X&ved=2ahUKEwjF17bgz_jkAhUCMewKHYNiA1gQuIIBegQIARAv&biw=1366&bih=657&dpr=1#imgdii=LSG7p1gIzd0CUM:&imgrc=FjJXa4dfF_zQ-M: "> About Us</a> </li>
+      
       <li> <a href=" http://rosestoryfarm.com/  "> Events</a> </li>
        <li> <a href="  http://rosestoryfarm.com/ "> Our Garden</a> </li>
        <li> <a href="  http://rosestoryfarm.com/ "> Shop Services</a> </li>
